--- a/Project.toml
+++ b/Project.toml
@@ -5,10 +5,12 @@ version = "0.25.0"
 
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
+Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
 CoolProp = "e084ae63-2819-5025-826e-f8e611a84251"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -23,6 +25,7 @@ TestEnv = "1e6cf692-eddd-4d53-88a5-2d735e33781b"
 
 [compat]
 ArchGDAL = "0.8, 0.9"
+CoolProp = "0.1"
 HTTP = "0.8, 0.9, 1"
 JLD = "0.13"
 JSON = "0.21"
@@ -31,6 +34,5 @@ LinDistFlow = "0.1, 0.2"
 MathOptInterface = "0.9, 0.10, 1"
 Requires = "1.3"
 Roots = "1.3, 2"
-CoolProp = "0.1"
 TestEnv = "1.7"
 julia = "1.4, 1.5, 1.6, 1.7"
